# aoc

2019/: CMakeLists.txt  conanfile.py  files.cmake  log
2019/day1/: input.json  main.cpp
2019/day10/: input.json  main.cpp
2019/day2/: input.json  main.cpp  main_bckp.cpp
2019/day5/: input.json  main.cpp  main_bckp.cpp
2019/day6/: input.json  main.cpp
2019/day7/: input.json  main.cpp  main_bckp.cpp
2019/day8/: input.json  main.cpp  result.ppm
2019/day9/: input.json  main.cpp
2019/intcode_computer/: intcode_computer.cpp  intcode_computer.h
2019/utils/: pathname.cpp  pathname.h
